fixed game area on firefox

--- a/src/client/game/game.scss
+++ b/src/client/game/game.scss
@@ -1,5 +1,6 @@
 .flip {
   -webkit-perspective: 800;
+  -moz-perspective: 800;
   margin: 10px;
   width: 50px;
   height: 50px;
@@ -7,18 +8,22 @@
 }
 .flip .card.flipped {
   -webkit-transform: rotateY(-180deg);
+  -moz-transform: rotateY(-180deg);
 }
 .flip .card {
   width: 100%;
   height: 100%;
   -webkit-transform-style: preserve-3d;
   -webkit-transition: 0.5s;
+  -moz-transform-style: preserve-3d;
+  -moz-transition: 0.5s;
 }
 .flip .card .face {
   width: 100%;
   height: 100%;
   position: absolute;
   -webkit-backface-visibility: hidden ;
+  -moz-backface-visibility: hidden ;
     font-family: Helvetica;
     font-weight: bolder;
     font-size: 250%;
@@ -29,6 +34,7 @@
 }
 .flip .card .back {
   -webkit-transform: rotateY(-180deg);
+  -moz-transform: rotateY(-180deg);
     background: #47B747;
     color: white;
 }
